Update or remove some documentation, update memory benchmark results