@@ -1,17 +1,36 @@
 # Configuration: JVM System Properties
 
-Depending on the Java version used, the aldica module requires that specific properties are set as parameters to the Java Virtual Machine, while other properties are recommended for either best performance or general avoidance of log output noise. These properties can typically be set in the Tomcat startup scripts using the JAVA\_OPTS environment variable, or provided via the same environment variable in Docker configurations, either via Docker Compose or Kubernetes configuration files. The default Docker images for Alfresco Share use the CATALINA\_OPTS environment variable to pass along configuration, but the specific required and recommended settings are the same for Repository and for Share. The Repository companion app requires the parameters to be provided with the command line invocation of the runnable JAR file.
+Depending on the Java version used, the aldica module requires that specific properties are set as parameters to the Java Virtual Machine, while other properties are recommended for either best performance or general avoidance of log output noise. These properties can typically be set in the Tomcat startup scripts using the JAVA\_OPTS environment variable, or provided via the same environment variable in Docker configurations, either via Docker Compose or Kubernetes configuration files. The default Docker images for Alfresco Share use either the CATALINA\_OPTS or JAVA\_OPTS environment variable to pass along configuration, but the specific required and recommended settings are the same for Repository and for Share. The Repository companion app requires the parameters to be provided with the command line invocation of the runnable JAR file.
 
-The following parameters are required to be set when Alfresco and the aldica module are run on Java 11 or higher:
+The following parameters are required to be set when Alfresco and the aldica module are run on Java 11 and higher:
 
 ```
---add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
---add-exports=java.base/sun.nio.ch=ALL-UNNAMED
---add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
---add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
---add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
---illegal-access=permit
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.base/java.time=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+--add-opens=java.base/javax.crypto=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.access=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+--add-opens=java.management/sun.management=ALL-UNNAMED
+--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
 ```
+
+These specific settings may not be strictly required for all combinations ACS / Java versions and aldica binary optimisation settings, and have been collected from multiple tests with different configurations to provide a recommendation that ensures aldica works correctly in any of the configurations tested during development.
 
 This configures the module system of Java to allow access to some of the internal packages to any unnamed module. Alfresco runs within a Tomcat web application and is itself not modularized using the new Java module system. Exposing the internal packages to unnamed modules is the only way to grant the Apache Ignite library access to those functionalities.
 
@@ -34,7 +53,7 @@ While both aldica and Ignite support IPv6, Ignite suggests restricting Java to I
 By default, the Apache Ignite library prints quite verbose log output to the system output stream and regular logs during startup. Some additional verbose log output may also be printed at regular intervals during the runtime of the Alfresco application. The following properties deactivate the most verbose and inconsequential of log output produced by the Apache Ignite library:
 
 ```
--DIGNITE_PERFORMANCE_SUGGESTIONS_DISABLED=true -DIGNITE_QUIET=true -DIGNITE_NO_ASCII=true -DIGNITE_UPDATE_NOTIFIER=false -DIGNITE_JVM_PAUSE_DETECTOR_DISABLED=true
+-DIGNITE_PERFORMANCE_SUGGESTIONS_DISABLED=true -DIGNITE_QUIET=true -DIGNITE_NO_ASCII=true -DIGNITE_UPDATE_NOTIFIER=false -DIGNITE_JVM_PAUSE_DETECTOR_DISABLED=true -DIGNITE_SKIP_CONFIGURATION_CONSISTENCY_CHECK=true
 ```
 
 Due to a [known issue](https://github.com/aldica/aldica/issues/39) in upstream Ignite, the Repository-tier module and companion application require that the configuration consistency check be disabled until the underlying issue has been resolved:
